# mail-autoconfig

./: .dockerignore  Cargo.toml  Dockerfile  README.md  default_config.toml
.github/workflows/: main.yml
src/: config.rs  global_state.rs  main.rs  util.rs
templates/: apple_config.plist  apple_email.html  microsoft_config.xml  thunderbolt_config.xml
