[package]
name = "mail-autoconfig"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime + Utilities
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
eyre = "0.6"
color-eyre = "0.6"
arc-swap = "1.5"

tera = "1.15"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
rxml = { version = "0.8", features = ["async"] }
notify = "4.0"

openssl = "0.10"

# Serialization & Configuration
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.5"
clap = { version = "3.1", features = ["derive"] }
uuid = { version ="1.1", features = ["v4", "fast-rng", "serde"] }
form_urlencoded = "1.0"
email_address = { version = "0.2", features = ["serde"]}
